k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-oci-sample
  namespace: gne-test
  labels:
    app: flux-oci-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flux-oci-sample
  template:
    metadata:
      labels:
        app: flux-oci-sample
    spec:
      containers:
      - name: flux-oci-sample
        image: ghcr.io/shinhancard/flux-oci-sample:image-REPLACEME
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "768Mi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
