k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-oci-sample
  namespace: gne-test
  labels:
    app: flux-oci-sample
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: flux-oci-sample
